# mnist

./: .gitignore  Dockerfile  README.md  ml-work-cronjob  pyproject.toml  run.sh
data/images/: samdulko.pem
note/: Untitled.ipynb
src/mnist/: main.py  worker.py
src/mnist/utils/: db.py  predict.py  util.py
tests/: test_mnist.py
