[project]
name = "mnist"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ml-worker = 'mnist.worker:run'

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pdm]
distribution = true
